--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -97,6 +97,10 @@ jobs:
         echo '  make release'
         exit 1
 
+    # call autobuild action
+    - name: Autobuild
+      uses: github/codeql-action/autobuild@v3
+    
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
       with:
